--- a/styles/style.css
+++ b/styles/style.css
@@ -66,15 +66,15 @@ h1 {
   justify-content: center;
   align-items: center;
   position: fixed;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
+  right: 0.5rem;
+  top: 50%;
+  transform: translateY(-50%);
 }
 #footer #socials {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 2rem;
-  padding: 1rem 4rem;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-gap: 4rem;
+  padding: 4rem 1rem;
   background: rgb(0, 0, 0);
 }
 #footer #socials a {
@@ -83,6 +83,21 @@ h1 {
 }
 #footer #socials li {
   list-style: none;
+}
+
+@media screen and (max-width: 950px) {
+  #dark-mode-toggle-div, h1 {
+    display: none;
+  }
+  #nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+  #nav #main-menu {
+    grid-gap: 5rem;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
