--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,7 @@
 html {
   font-size: 62.5%;
   font-family: "Hanken Grotesk", "sans-serif";
+  scroll-behavior: smooth;
 }
 
 body {
@@ -18,10 +19,12 @@ h1 {
   font-size: 2rem;
 }
 
+h2 {
+  font-size: 3.6rem;
+  font-weight: normal;
+}
+
 #nav {
-  position: fixed;
-  top: 0;
-  width: 100vw;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   align-items: center;
@@ -37,7 +40,7 @@ h1 {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   font-weight: bold;
 }
 #nav #main-menu li {
@@ -98,6 +101,62 @@ h1 {
   #nav #main-menu {
     grid-gap: 5rem;
   }
+}
+@media screen and (min-width: 1600px) {
+  body {
+    padding: 0 16rem 0 16rem;
+  }
+}
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+#intro {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 90vh;
+  padding: 2rem;
+}
+#intro #intro-heading {
+  font-size: 5rem;
+  text-align: center;
+}
+#intro #intro-heading #intro-name {
+  color: rgb(27, 115, 57);
+}
+#intro #intro-subheading {
+  font-size: 2.4rem;
+}
+#intro #intro-subheading a {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+  border-bottom: solid rgb(255, 255, 255);
+}
+#intro #intro-subheading a:hover {
+  border-bottom-color: rgb(0, 0, 0);
+}
+
+#about {
+  height: 100vh;
+  padding: 0 4rem;
 }
 
 /*# sourceMappingURL=style.css.map */
